Modified RNAalifold to create output in temporary directory.